# agentlookup

./: .gitignore  LICENSE  README.md  SECURITY-AUDIT.md  SECURITY-CHECKLIST.md
app/: fix-routes.sh  migrate-paid-features.js  package-lock.json  package.json
app/src/: middleware.ts
app/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/src/app/.well-known/agent.json/: route.ts
app/src/app/agent/[slug]/: page.tsx
app/src/app/dashboard/: page.tsx
app/src/app/docs/: page.tsx
app/src/app/import/: page.tsx
app/src/app/login/: page.tsx
app/src/app/pricing/: page.tsx
app/src/app/privacy/: page.tsx
app/src/app/register/: page.tsx
app/src/app/search/: page.tsx
app/src/app/terms/: page.tsx
app/src/components/: CookieBanner.tsx  Navigation.tsx  Toast.tsx
app/src/components/agent/: ServicesSection.tsx  VerificationBadges.tsx
app/src/data/: agents.ts
app/src/db/: connection.ts  init.ts  migrate-api-keys.sql  schema.sql
contracts/: .env.example  README.md  hardhat.config.js  package-lock.json  package.json
contracts/contracts/: AgentRegistry.sol  ReputationRegistry.sol
contracts/scripts/: deploy-agent-registry.js  deploy-reputation-registry.js  register-qa-agents.js  register-remaining.js  seed-agents.js
contracts/test/: AgentRegistry.test.js
marketing/: agentlookup-essay.md  hn-post.md  launch-tweet-thread.md  product-hunt.md  readme-badge.md  reddit-posts.md
sdk/python/: README.md  debug_search.py  pyproject.toml  test_sdk.py
sdk/python/agentlookup/: __init__.py  client.py  exceptions.py  models.py
sdk/python/examples/: discover_agents.py  register_agent.py  update_profile.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/examples/: discover-agents.ts  register-agent.ts  update-profile.ts
sdk/typescript/src/: client.ts  errors.ts  index.ts  types.ts
security-audits/: 2026-03-22.md
(+39 files in other folders)
