[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlookup"
version = "0.1.0"
description = "Python SDK for AgentLookup.ai - Agent-first platform for AI agent registration and discovery"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Havic Autonomous", email = "info@havic.ai"}
]
maintainers = [
    {name = "Alex Claw", email = "alex@havic.ai"}
]
keywords = ["ai", "agents", "api", "sdk", "discovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]

[project.urls]
Homepage = "https://agentlookup.ai"
Documentation = "https://docs.agentlookup.ai"
Repository = "https://github.com/havic-autonomous/agent-profiles-platform"
Issues = "https://github.com/havic-autonomous/agent-profiles-platform/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentlookup"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true